objects/Job_Sales_Invoices__c.object
<CustomObject>
    <description>Summarises details of sales invoices to customers</description>
    <fields>
        <fullName>Amount_Received_AUD__c</fullName>
        <formula>Amount_Received_FX__c / Invoice_Billing_X_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Received AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Received_Comments__c</fullName>
        <inlineHelpText>Record any comments related to payments received</inlineHelpText>
        <label>Amount Received Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Received_FX__c</fullName>
        <description>Record total amount received in relation to this invoice</description>
        <label>Amount Received FX</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aust_Int__c</fullName>
        <formula>CASE (Job__r.Aust_Int__c
                      ,&quot;Australia&quot;,&quot;Australia&quot;
                      ,&quot;International&quot;,&quot;International&quot;
                      ,&quot;UNKNOWN&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aust/Int</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Billing_X_Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Exchange rate recorded in MYOB for this invoice</description>
        <label>Invoice Billing X Rate</label>
        <precision>16</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <formula>CASE (Job__r.Job_Type__c 
                      ,&quot;Retainer&quot;,&quot;Consulting&quot;
                      ,&quot;Consulting&quot;,&quot;Consulting&quot;
                      ,&quot;Coaching&quot;,&quot;Consulting&quot;
                      ,&quot;Training&quot;
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Sales Invoices</relationshipLabel>
        <relationshipName>Job_Sales_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Receipt_Date__c</fullName>
        <inlineHelpText>Record the latest date that any payments were received against this invoice</inlineHelpText>
        <label>Last Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prov_ENS_Staff_Pcnt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the total percentage due to ENS Staff (not counting the ENS Ratio) for this invoice</inlineHelpText>
        <label>Prov_ENS_Staff_Pcnt</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prov_Ext_Oth_Pcnt__c</fullName>
        <defaultValue>0.325</defaultValue>
        <inlineHelpText>Enter the total percentage of this invoice payable as ENS Ratio to ENS</inlineHelpText>
        <label>Prov_ENS_Ratio_Pcnt</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prov_Ext_Pres_Pcnt__c</fullName>
        <defaultValue>0.45</defaultValue>
        <inlineHelpText>Enter the total percentage of this invoice to be paid as &apos;Presenter&apos; to parties outside ENS</inlineHelpText>
        <label>Prov_Ext_Pres_Pcnt</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prov_Ext_Sell_Pcnt__c</fullName>
        <defaultValue>0.1125</defaultValue>
        <inlineHelpText>Enter the total percentage of this invoice to be paid as &apos;SELL&apos; to parties outside ENS</inlineHelpText>
        <label>Prov_Ext_Sell_Pcnt</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prov_Ext_Spot_Pcnt__c</fullName>
        <defaultValue>0.1125</defaultValue>
        <inlineHelpText>Enter the total percentage of this invoice to be paid as &apos;SPOT&apos; to parties outside ENS</inlineHelpText>
        <label>Prov_Ext_Spot_Pcnt</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prov_Marketing_AUD__c</fullName>
        <formula>Prov_Marketing_FX__c /  Invoice_Billing_X_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prov_Marketing_AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prov_Marketing_FX__c</fullName>
        <formula>( Prov_Ext_Sell_Pcnt__c +  Prov_Ext_Spot_Pcnt__c ) *  Sales_Inv_Prof_Fee_FX__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prov_Marketing_FX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prov_Materials_Comm_AUD__c</fullName>
        <formula>Prov_Materials_Comm_FX__c /  Invoice_Billing_X_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prov_Materials_Comm_AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prov_Materials_Comm_FX__c</fullName>
        <formula>Prov_Materials_Pcnt__c *   Sales_Inv_Materials_FX__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prov_Materials_Comm_FX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prov_Materials_Pcnt__c</fullName>
        <defaultValue>0.2</defaultValue>
        <inlineHelpText>Please enter the total Materials % due to external parties</inlineHelpText>
        <label>Prov_Materials_Pcnt</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prov_Presenter_AUD__c</fullName>
        <formula>Prov_Presenter_FX__c /  Invoice_Billing_X_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prov_Presenter_AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prov_Presenter_FX__c</fullName>
        <formula>Prov_Ext_Pres_Pcnt__c *  Sales_Inv_Prof_Fee_FX__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prov_Presenter_FX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prov_Total_Pcnt__c</fullName>
        <formula>Prov_Ext_Oth_Pcnt__c + Prov_ENS_Staff_Pcnt__c + Prov_Ext_Pres_Pcnt__c + Prov_Ext_Sell_Pcnt__c  + Prov_Ext_Spot_Pcnt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prov_Total_Pcnt</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Inv_Materials_AUD__c</fullName>
        <formula>Sales_Inv_Materials_FX__c / Invoice_Billing_X_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Inv Materials AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Inv_Materials_FX__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Inv Materials FX</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Inv_Prof_Fee_AUD__c</fullName>
        <formula>Sales_Inv_Prof_Fee_FX__c  /  Invoice_Billing_X_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Inv Prof Fee AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Inv_Prof_Fee_FX__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Professional fees value for this invoice related to current job</description>
        <label>Sales Inv Prof Fee FX</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Inv_Tot_FX_Check__c</fullName>
        <formula>Sales_Inv_Materials_FX__c  +  Sales_Inv_Prof_Fee_FX__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Inv Tot FX Check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Inv_Total_FX__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Record the total invoice amount for this invoice</description>
        <label>Sales Inv Total FX</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Date__c</fullName>
        <description>Same date as recorded in MYOB for this invoice</description>
        <label>Sales Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Job Sales Invoice</label>
    <nameField>
        <label>Job Sales Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Sales Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Total_Provision_Percent</fullName>
        <active>true</active>
        <description>Ensures that total % provisions for invoice add to 100%</description>
        <errorConditionFormula>Prov_Total_Pcnt__c  &lt;&gt;1.0</errorConditionFormula>
        <errorMessage>You must ensure that the total provision percentages add to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zero_Exchange_Rate</fullName>
        <active>true</active>
        <errorConditionFormula>Invoice_Billing_X_Rate__c = 0</errorConditionFormula>
        <errorDisplayField>Invoice_Billing_X_Rate__c</errorDisplayField>
        <errorMessage>Exchange rate must not be equal to zero.</errorMessage>
    </validationRules>
</CustomObject>